--- a/index.html
+++ b/index.html
@@ -69,21 +69,22 @@
 <table style="width:100%">
 <tr>
     <td colspan="2" style="padding:20px;" >
-    <img src="c:/users/hp/desktop/pro2/img/den.jpg" style="width:330px;height:300px ;"> 
+    <img src="img/den.jpg" style="width:330px;height:300px ;"> 
     <h2 align="center" >DENTIST</h2>
     </td>
     <td colspan="2" style="padding:20px;">
-        <img src="c:/users/hp/desktop/pro2/img/int.png" style="width:330px;height:300px ;">
+        <img src="img/int.png" style="width:330px;height:300px ;">
         <h2 align="center">INTERNAL CLINIC</h2>
     </td>
     <td colspan="2" style="padding:20px;">
-        <img src="c:/users/hp/desktop/pro2/img/eye.jpg" style="width:330px;height:300px ;">
+        <img src="img/eye.jpg" style="width:330px;height:300px ;">
         <h2 align="center">EYE CLINIC </h2>
     </td>
     <td colspan="2" style="padding:20px;">
-        <img src="c:/users/hp/desktop/pro2/img/child.jpg" style="width:330px;height:300px ;">
+        <img src="img/child.jpg" style="width:330px;height:300px ;">
         <h2 align="center">BABY CLINIC </h2>
     </td>
+</tr>
 </tr>
 <tr>
     <td colspan="2" style="padding:20px;">
