--- a/index.html
+++ b/index.html
@@ -87,21 +87,21 @@
 </tr>
 </tr>
 <tr>
-    <td colspan="2" style="padding:20px;">
-        <img src="c:/users/hp/desktop/pro2/img/heart.png" style="width:330px;height:300px ;">
-        <h2 align="center">HEART CLINIC </h2>
+    <td colspan="2" style="padding:20px;" >
+    <img src="img/den.jpg" style="width:330px;height:300px ;"> 
+    <h2 align="center" >DENTIST</h2>
     </td>
     <td colspan="2" style="padding:20px;">
-        <img src="c:/users/hp/desktop/pro2/img/Dermatology.jpg" style="width:330px;height:300px ;">
-        <h2 align="center">DERMATOLOGY CLINIC </h2>
+        <img src="img/int.png" style="width:330px;height:300px ;">
+        <h2 align="center">INTERNAL CLINIC</h2>
     </td>
     <td colspan="2" style="padding:20px;">
-        <img src="c:/users/hp/desktop/pro2/img/bones.jpeg" style="width:330px;height:300px ;">
-        <h2 align="center">BONE AND JOINT CLINIC </h2>
+        <img src="img/eye.jpg" style="width:330px;height:300px ;">
+        <h2 align="center">EYE CLINIC </h2>
     </td>
     <td colspan="2" style="padding:20px;">
-        <img src="c:/users/hp/desktop/pro2/img/bra.png" style="width:330px;height:300px ;">
-        <h2 align="center">NEUROLOGY CLINIC </h2>
+        <img src="img/child.jpg" style="width:330px;height:300px ;">
+        <h2 align="center">BABY CLINIC </h2>
     </td>
 </tr>
 </table></section>
